fix set dark mode

--- a/src/styles/components/navbar-theme-switcher.scss
+++ b/src/styles/components/navbar-theme-switcher.scss
@@ -2,6 +2,7 @@
   top: 0.1rem;
   position: relative;
   cursor: pointer;
+  display: none;
 
   span {
     font-size: 0 !important;
